@@ -7,8 +7,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - $r->set_handlers(PerlAuthenHandler => undef) stomps other config!?
 
-- how to manipulate order of handlers (not just Perl*Handlers)
-
 - %Files doesnt work, nor does @DirectoryIndex outside of %Location
 
 - -Duseperlio w/o -Dusesfio, #ifndef PERLIO_IS_STDIO, #define PERLIO_IS_STDIO
